# tetris-c

./: .clangd  .gitignore  CMakeLists.txt  makefile  tetris-c
include/: data_structures.h  render.h  tetromino.h
src/: main.c  render.c  tetromino.c
